<!-- TODO: Mantener ordenado -->

<resources>
    <string name="app_name">Jobify</string>


    <!-- Menúes -->
    <string name="action_settings">Configuración</string>


    <string name="facebook_app_id">1220675784659960</string>

    <!-- Perfil -->
    <string name="title_activity_perfil">Cargando perfil…</string>

    <string name="perfil_foto_description">Foto perfil</string>
    <string name="perfil_nombre_y_apellido_default">Joan of Arc</string>
    <string name="perfil_mail_default">email@normal.com.ar</string>

    <string name="perfil_trabajo_actual_default">CEO en Jobify</string>
    <string name="perfil_ciudad_y_pais_default">Brasilia, Brasil</string>
    <string name="perfil_cant_recomendaciones_default">#</string>
    <string name="perfil_nacimiento_default">Fecha de nacimiento</string>

    <string name="perfil_resumen_default">Me need job.</string>

    <string name="perfil_contactos_title">Contactos</string>
    <string name="perfil_cant_amigos_default">0</string>
    <string name="perfil_contact_card_foto_description">Foto perfil de contact card</string>

    <string name="perfil_exp_laboral_title">Experiencia Laboral</string>
    <string name="perfil_skills_title">Skills</string>

    <string name="BASE_HTTP_URL">http://192.168.43.236:8000/</string>
    <string name="get_user_path">users</string>
    <string name="get_photo_path">profilepicture</string>
    <string name="post_photo_path">profilepicture</string>
    <string name="get_thumbnail_path">profilepicture</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Configuración</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_appServer_title">AppServer</string>

    <string name="pref_title_appServer_ip">IP</string>
    <string name="pref_default_appServer_ip">192.168.0.116</string>

    <string name="pref_title_appServer_puerto">Puerto</string>
    <string name="pref_default_appServer_puerto">8000</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <!-- NavDrawer -->
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_settings_option">Configuración</string>


    <!-- Login -->
    <string name="title_activity_login">Iniciar sesión</string>

    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Nuevo usuario</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio >:^[</string>
    <string name="permission_rationale">"Acepta los permisos para facilitar el login"</string>
    <string name="permission_rationale_acceptance">"Permiso de acceso para poder autocompletar"
        "tu correo"
    </string>

    <!-- Otros -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum..</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="stored_connected_user_id">connected_user_id</string>
    <string name="shared_pref_connected_user">connected_user</string>
    <string name="title_activity_user_list">Listado</string>
    <string name="location_icon_description">Ícono de locación</string>
    <string name="add_item_description">Add item</string>
    <string name="remove_item_description">Remove item</string>
    <string name="nav_drawer_thumbnail_description">Thumbnail del usuario conectado en el navigation drawer</string>
    <string name="get_contacts_path">contacts</string>
    <string name="put_contacts_path">contacts</string>
    <string name="dialog_agregar_contacto">¿Enviar solicitud para agregar como contacto?</string>
    <string name="dialog_aceptar_contacto">¿Aceptar como contacto?</string>
    <string name="dialog_cancelar_contacto">¿Quiere cancelar su solicitud de contacto?</string>
    <string name="dialog_eliminar_contacto">¿Quiere eliminar a este contacto?</string>
    <string name="nav_solicitudes_option">Solicitudes</string>
    <string name="nav_most_popular_option">Profesionales más populares</string>
    <string name="get_all_users_path">allusers</string>
    <string name="ss_get_categories_path">categories</string>
    <string name="ss_get_job_positions_path">job_positions</string>
    <string name="ss_get_skills_path">skills</string>
    <string name="post_user_path">users</string>
    <string name="put_user_path">users</string>
    <string name="get_login_path">login</string>
    <string name="as_make_recommendation_path">recommendations</string>
    <string name="as_cancel_recommendation_path">recommendations</string>
    <string name="shared_server_base_url">https://intense-plains-63100.herokuapp.com/</string>
    <string name="login_invalid_empty_password">Contraseña vacía</string>
    <string name="perfil_nombre_editable_hint">Nombre</string>
    <string name="perfil_apellido_editable_hint">Apellido</string>
    <string name="perfil_ciudad_editable_hint">Ciudad</string>
    <string name="perfil_resumen_editable_hint">Cuente un poco de usted…</string>
    <string name="perfil_employment_new_position_hint">Puesto</string>
    <string name="perfil_skill_new_hint">Nuevo skill</string>
    <string name="perfil_employment_new_company_hint">Compañía</string>
    <string name="perfil_agregar_item_titulo">Agregar</string>
    <string name="desde">Desde</string>
    <string name="dia">día</string>
    <string name="mes">mes</string>
    <string name="barra">/</string>
    <string name="anio">año</string>
    <string name="hasta">Hasta</string>
    <string name="dialog_no">No</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_rechazar">Rechazar</string>
    <string name="perfil_nacimiento_title">Fecha de nacimiento:</string>
    <string name="pick_date_description">Elegir fecha</string>
    <string name="confirmacion_recomendar">¿Quiere recomendar a este profesional de empresa?</string>
    <string name="confirmacion_desrecomendar">¿Está seguro que quiere eliminar su recomendación?</string>
    <string name="enviar_mensaje_description">Enviar mensaje</string>
    <string name="conversacion_entrada_hint">Escriba su mensaje</string>
    <string name="conversacion_hora_default">22:09</string>
    <string name="message_tick_description">Estado de recepción de mensaje</string>
    <string name="get_messages_path">messages</string>
    <string name="put_messages_path">messages</string>
    <string name="title_activity_conversacion">Conversación</string>
    <string name="action_enviar_mensaje">Enviar mensaje</string>
    <string name="title_activity_busqueda">Búsqueda</string>
    <string name="get_messages_first_query">first</string>
    <string name="get_messages_last_query">last</string>
    <string name="busqueda_logo_description">logo</string>
    <string name="busqueda_job_positions_title">Experiencia</string>
    <string name="busqueda_distancia_hint">10</string>
    <string name="busqueda_distancia_unidad">km</string>
    <string name="busqueda_btn_busqueda">Jobisearch!</string>
    <string name="get_messages_user_query">user</string>
    <string name="get_busqueda_path">search</string>
    <string name="stored_connected_user_token">connected_user_token</string>
    <string name="info_description">Info</string>
    <string name="userlist_no_results">No hay resultados que mostrar</string>
    <string name="nav_busqueda_option">Buscar</string>
    <string name="ellipsis">…</string>
    <string name="stored_connected_user_email">connected_user_email</string>
    <string name="stored_connected_user_fullname">connected_user_fullname</string>
    <string name="stored_connected_user_password">connected_user_password</string>
    <string name="stored_connected_user_location">connected_user_location</string>
    <string name="busqueda_skills_title">Skills</string>
    <string name="busqueda_distancia_title">Distancia máxima</string>
    <string name="get_conversations_path">conversations</string>
    <string name="nav_conversations_option">Conversaciones</string>
    <string name="notification_token">notificationtokens</string>
    <string name="nav_logout_option">Cerrar sesión</string>
    <string name="perfil_new_job_position_filler">(Posición de trabajo)</string>
    <string name="perfil_new_skill_filler">(Skill)</string>
    <string name="perfil_recommendation_success">¡Usuario recomendado!</string>
    <string name="perfil_recommendation_deletion_success">Se ha quitado la recomendación :(</string>

    <string name="get_search_path">search</string>
    <string name="get_busqueda_users_first_query">first</string>
    <string name="get_busqueda_users_last_query">last</string>
    <string name="get_busqueda_users_name_query">names</string>
    <string name="get_busqueda_users_mail_query">mails</string>
    <string name="get_busqueda_users_job_positions_query">positions</string>
    <string name="get_busqueda_users_skills_query">skills</string>
    <string name="get_busqueda_users_distance_query">distance</string>
    <string name="get_busqueda_users_page_number_query">pageNumber</string>
    <string name="get_busqueda_users_page_size_query">size</string>

    <string name="busqueda_nombre_title">Nombre</string>
    <string name="busqueda_nombre_hint">(opcional)</string>
    <string name="busqueda_mail_title">Mail</string>
    <string name="busqueda_mail_hint">(opcional)</string>
    <string name="pref_app_server_ip">pref_appServer_ip</string>
    <string name="pref_app_server_port">pref_appServer_puerto</string>
    <string name="get_profile_path">profile</string>

</resources>
