<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_busqueda"
            android:icon="@drawable/ic_search_negro"
            android:title="@string/nav_busqueda_option" />
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_most_popular_option" />
        <item
            android:id="@+id/nav_solicitudes"
            android:icon="@drawable/ic_solicitudes"
            android:title="@string/nav_solicitudes_option" />
        <item
            android:id="@+id/nav_conversaciones"
            android:icon="@drawable/ic_conversaciones"
            android:title="@string/nav_conversations_option" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings_option" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout_option" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
