<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/nav_drawer_header_layout"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_drawer_user_thumbnail"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_refreshing"
        android:contentDescription="@string/nav_drawer_thumbnail_description"
        android:visibility="invisible"
        android:onClick="irAPerfilPropio" />
        <!--TODO: Lograr que lo encuentre??-->

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="@dimen/nav_header_vertical_spacing"-->
        <!--android:src="@android:drawable/sym_def_app_icon" />-->

    <TextView
        android:id="@+id/nav_drawer_user_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/perfil_nombre_y_apellido_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:onClick="irAPerfilPropio" />

    <TextView
        android:id="@+id/nav_drawer_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_mail_default"
        android:onClick="irAPerfilPropio" />

</LinearLayout>
