<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/small_margin"
    android:paddingRight="@dimen/small_margin"
    android:paddingBottom="@dimen/small_margin">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/contact_card_foto"
                android:layout_width="@dimen/contact_card_picture_width"
                android:layout_height="@dimen/contact_card_picture_height"
                android:layout_centerHorizontal="true"
                android:src="@drawable/placeholder_image"
                android:contentDescription="@string/perfil_contact_card_foto_description" />

            <TextView
                android:id="@+id/contact_card_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/contact_card_foto"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="@string/perfil_nombre_y_apellido_default" />

            <TextView
                android:id="@+id/contact_card_trabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/contact_card_nombre"
                android:layout_centerHorizontal="true"
                android:text="@string/perfil_trabajo_actual_default" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>