<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="9dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->

    <!--TODO: Considerar mover esto a la Toolbar-->
    <ImageButton
        android:id="@+id/conversacion_thumbnail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:onClick="irAPerfil"
        android:src="@drawable/ic_refreshing"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:background="#0000"
        android:contentDescription="@string/perfil_foto_description" />

    <!--TODO: Poner una especie de barra divisora acá-->

    <TextView
        android:id="@+id/conversacion_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="end"
        android:text="@string/ellipsis"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="26sp"
        android:textStyle="bold"
        android:onClick="irAPerfil"
        android:layout_toRightOf="@id/conversacion_thumbnail" />

    <ImageButton
        android:id="@+id/conversacion_btn_mandar"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dp"
        android:layout_marginRight="8dp"
        android:onClick="enviarMensaje"
        android:src="@drawable/ic_mandar_mensaje"
        android:background="#0000"
        android:contentDescription="@string/enviar_mensaje_description" />

    <!--&lt;!&ndash; Dummy item para prevenir foco automático en el input &ndash;&gt;-->
    <!--<LinearLayout-->
        <!--android:id="@+id/inutil"-->
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="0px"-->
        <!--android:layout_height="0px"/>-->

    <EditText
        android:id="@+id/conversacion_entrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        android:layout_toLeftOf="@id/conversacion_btn_mandar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:maxLines="7"
        android:inputType="textMultiLine"
        android:imeActionId="@+id/conversacion_enviar"
        android:imeActionLabel="@string/action_enviar_mensaje"
        android:imeOptions="actionUnspecified"
        android:hint="@string/conversacion_entrada_hint" />
    <!--android:nextFocusUp="@id/conversacion_entrada"-->
    <!--android:nextFocusLeft="@id/conversacion_entrada"-->

    <ListView
        android:id="@+id/conversacion_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/conversacion_entrada"
        android:layout_below="@id/conversacion_thumbnail"
        android:paddingBottom="6dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:stackFromBottom="true"
        android:transcriptMode="normal">
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    </ListView>

</RelativeLayout>
